--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section>
 
-        <img id = "img1" src="/ilustration/1.jpg" style="background-repeat: no-repeat;background-size: cover;">
+        <img id = "img1" src="./ilustration/1.jpg" style="background-repeat: no-repeat;background-size: cover;">
         <p id="slogan">
             <span style="color: #FF2626;">#</span> A PLATFORM FOR <span class="red">STUDENTS</span> TO BUY <span id="blue">USED</span> PRODUCTS <span class="yellow">CHEAPER</span> AND  <span class="yellow">TRUSTED</span>.
         </p>
