--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <nav>
         <h1 id="title">EDU-GEAR</h1>
         <ul>
-            <li>HOME</li>
-            <li>SHOP</li>
-            <li>ABOUT</li>
-            <li>CONTACT</li>
-            <li>EMPTY</li>
+            
+            <li><a href="about.html" style="text-decoration: none;color: lightskyblue;">About</a></li>
+            <li><a href="about.html" style="text-decoration: none;color: black;">Home</a></li>
+            <li><a href="about.html" style="text-decoration: none;color: lightskyblue;">Shop</a></li>
+            <li><a href="about.html" style="text-decoration: none;color: black;">Dash Board</a></li>
+            <li><a href="about.html" style="text-decoration: none;color: lightskyblue;">Contact</a></li>
+            
         </ul>
         <hr class="line">
     </nav>
