--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
             
         </div>
     </div>
+    <div id="button">
+        <a href="shop.html"><p>Click Here To Shop Now</p></a>
+    </div>
     <hr class="line" style="margin-top: 40px;">
 
   <!--contact-->
