--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <h1 id="title">EDU-GEAR</h1>
         <ul>
             
-            <li><a href="index.html" style="text-decoration: none;color: lightskyblue;">Home</a></li>
+            <li><a href="index.html" style="text-decoration: none;color: black;">Home</a></li>
             <li><a href="about.html" style="text-decoration: none;color: black;">About</a></li>
-            <li><a href="shop.html" style="text-decoration: none;color: lightskyblue;">Shop</a></li>
+            <li><a href="shop.html" style="text-decoration: none;color: black;">Shop</a></li>
             <li><a href="about.html" style="text-decoration: none;color: black;">Dash Board</a></li>
-            <li><a href="#bottom" style="text-decoration: none;color: lightskyblue;">Contact</a></li>
+            <li><a href="#bottom" style="text-decoration: none;color: black;">Contact</a></li>
             
         </ul>
         <hr class="line">
