--- a/about.html
+++ b/about.html
@@ -15,11 +15,12 @@
         <ul>
             <li><a href="index.html" style="text-decoration: none;">Home</a></li>
             <li><a href="index.html" style="text-decoration: none;">Shop</a></li>
-            <li><a href="index.html" style="text-decoration: none;">Dashboard</a></li>
+            <li><a href="dash.html" style="text-decoration: none;">Dashboard</a></li>
             <li><a href="#bottom" style="text-decoration: none;">contact</a></li>
             
         </ul>
     </header>
+
     <section>
         <div class="sec">
             <p>THE BEST WEBSITE <br>FOR STUDENTS THAT ARE <br>MADE BY STUDENTS</p>
