--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="index.html" style="text-decoration: none;color: black;">Home</a></li>
             <li><a href="about.html" style="text-decoration: none;color: black;">About</a></li>
             <li><a href="shop.html" style="text-decoration: none;color: black;">Shop</a></li>
-            <li><a href="about.html" style="text-decoration: none;color: black;">Dash Board</a></li>
+            <li><a href="dash.html" style="text-decoration: none;color: black;">Dash Board</a></li>
             <li><a href="#bottom" style="text-decoration: none;color: black;">Contact</a></li>
             
         </ul>
