--- a/dash.html
+++ b/dash.html
@@ -28,13 +28,13 @@
         <p>COOL<br>OFFERS</p>
       </div>
       <div class="image">
-        <img src="dashboard/3.jpg" alt="image" width="100%" height="100%" />
+        <img src="dashboard/3.jpg" alt="image" width="100%" height="900px" />
       </div>
     </div>
 
     <div class="apple">
         <div class="img2">
-            <img src="dashboard/apple.png" alt="image" width="600px" height="400px" />
+            <img src="dashboard/apple.png" alt="image" width="100%" height="100%" />
         </div>
         <div class="text2">
             <h2>Get apple music just at 59rs on unidays with the student account !</h2>
@@ -47,7 +47,7 @@
     <div class="spotify">
         
         <div class="text3">
-            <h2>Get spotify music just at 59rs on unidays with the student account !</h2>
+            <h2>Get spotify premium just at 99rs with the student account !</h2>
             <p class="exp">Explore</p>
         </div>
         <div class="img3">
@@ -56,6 +56,15 @@
     </div>
 
     <hr style="border: 2px solid black;">
+
+    <!-- <div class="youtube">
+        <div class="img4">
+
+        </div>
+        <div class="text4">
+
+        </div>
+    </div> -->
    
   </body>
 </html>
