--- a/dash.html
+++ b/dash.html
@@ -28,7 +28,7 @@
         <p>COOL<br>OFFERS</p>
       </div>
       <div class="image">
-        <img src="dashboard/3.jpg" alt="image" width="100%" height="900px" />
+        <img src="dashboard/2.jpeg" alt="image" width="100%" height="100%" />
       </div>
     </div>
 
