--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#bottom" style="text-decoration: none;color: black;">Contact</a></li>
             
         </ul>
-        <hr class="line">
+        <hr class="line" style="margin-top: 20px;">
     </nav>
 
     <!--section-->
