--- a/dash.html
+++ b/dash.html
@@ -13,6 +13,10 @@
   </head>
   <body>
 
+    <div class="back">
+      <a href="index.html"><img src="ilustration/images/back.png" alt="back" height="80px" width="80px" ></a>
+    </div>
+
     <div class="one">
         <div class="img1">
             <img src="dashboard/1.png" alt="image" width="400px" height="600px" />
@@ -38,7 +42,7 @@
         </div>
         <div class="text2">
             <h2>Get apple music just at 59rs on unidays with the student account !</h2>
-            <p class="exp">Explore</p>
+            <a href="https://www.myunidays.com/IN/en-IN/partners/applemusic/view" style=" text-decoration:none;"><p class="exp">Explore</p></a>
         </div>
     </div>
 
@@ -47,27 +51,34 @@
     <div class="spotify">
         
         <div class="text3">
-            <h2>Get spotify premium just at 99rs with the student account !</h2>
-            <p class="exp">Explore</p>
+            <h2>Get spotify premium just at 59rs with the student account !</h2>
+            <a href="https://www.spotify.com/in-en/student/" style=" text-decoration:none;"><p class="exp">Explore</p></a>
         </div>
         <div class="img3">
             <img src="dashboard/spotify.jpg" alt="image" width="900px" height="400px" />
         </div>
     </div>
-
-    <hr style="border: 2px solid black;">
-
-   
-
- 
-    <!-- <div class="youtube">
+    <div class="youtube">
         <div class="img4">
-
+          <img src="dashboard/yt.jpg" alt="image" width="900px" height="400px" />
         </div>
         <div class="text4">
-
+          <h2>Get Youtube premium just at 79rs with the student account !</h2>
+          <a href="https://www.youtube.com/premium/student" style=" text-decoration:none;"><p class="exp">Explore</p></a>
         </div>
-    </div> -->
+    </div>
+    <div class="prime">
+      <div class="text4">
+        <h2>As a Prime Student member, you receive a six-month trial that includes FREE Two-Day Shipping on eligible purchases.</h2>
+        <a href="https://www.amazon.com/Amazon-Student/b?ie=UTF8&node=668781011"><p class="exp" style="border: 4px solid aqua;" style=" text-decoration:none;"`>Explore</p></a>
+      </div>
+      <div class="img4">
+        <img src="dashboard/prime.png" alt="image" width="800px" height="450px" />
+      </div>
+      
+  </div>
+
+   
    
   </body>
 </html>
