--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
     <header>
         <img src="ilustration/images/logo.png" alt="logo" height="100px" width="100px">
         <ul>
-            <li><a href="index.html" style="text-decoration: none;">Home</a></li>
-            <li><a href="index.html" style="text-decoration: none;">Shop</a></li>
-            <li><a href="dash.html" style="text-decoration: none;">Dashboard</a></li>
-            <li><a href="#bottom" style="text-decoration: none;">contact</a></li>
+            <li><a href="index.html" target="_blank" style="text-decoration: none;">Home</a></li>
+            <li><a href="index.html" target="_blank" style="text-decoration: none;">Shop</a></li>
+            <li><a href="dash.html" target="_blank" style="text-decoration: none;">Dashboard</a></li>
+            <li><a href="#bottom" target="_blank" style="text-decoration: none;">contact</a></li>
             
         </ul>
     </header>
@@ -49,7 +49,7 @@
         <div class="imgs">
             <div class="one">
                 <img src="ilustration/verify.jpg" alt="verify" width="300px" height="300px">
-                <p class="one1">1️⃣ First We get product hands on and verify it properly and we decide the price and usage amount of the product and fix the price compared to the current market price.</p>
+                <p class="one1">1️⃣ First We get the old products hands on and verify it properly and we decide the price and calculate the usage  of the product and fix the price compared to the current market price.</p>
 
             </div>
             <div class="one">
