--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <img src="ilustration/images/logo.png" alt="logo" height="100px" width="100px">
         <ul>
             <li><a href="index.html" target="_blank" style="text-decoration: none;">Home</a></li>
-            <li><a href="index.html" target="_blank" style="text-decoration: none;">Shop</a></li>
+            <li><a href="shop.html" target="_blank" style="text-decoration: none;">Shop</a></li>
             <li><a href="dash.html" target="_blank" style="text-decoration: none;">Dashboard</a></li>
             <li><a href="#bottom" target="_blank" style="text-decoration: none;">contact</a></li>
             
