--- a/shop.html
+++ b/shop.html
@@ -201,11 +201,11 @@
  
 
 <!--contact-->
-<div class="bottom" >
+<div >
     <h1 style="text-align: center; font-size: 30px; font-family: Integralcf,Arial,sans-serif;margin-top: 30px;">CONTACT</h1>
 </div>
 
-    <div class="images">
+    <div class="images" id="bottom">
         <a href="https://www.linkedin.com/in/dharun-prasad-m-328974228/" target="_blank">
             <img src="ilustration/images/linked.png" alt="Linkedin" height="40px" width="40px">
             
