--- a/dash.html
+++ b/dash.html
@@ -42,7 +42,7 @@
         </div>
         <div class="text2">
             <h2>Get apple music just at 59rs on unidays with the student account !</h2>
-            <a href="https://www.myunidays.com/IN/en-IN/partners/applemusic/view" style=" text-decoration:none;"><p class="exp">Explore</p></a>
+            <a href="https://www.myunidays.com/IN/en-IN/partners/applemusic/view"  style=" text-decoration:none;"><p class="exp" target="_blank">Explore</p></a>
         </div>
     </div>
 
@@ -52,10 +52,10 @@
         
         <div class="text3">
             <h2>Get spotify premium just at 59rs with the student account !</h2>
-            <a href="https://www.spotify.com/in-en/student/" style=" text-decoration:none;"><p class="exp">Explore</p></a>
+            <a href="https://www.spotify.com/in-en/student/" target="_blank" style=" text-decoration:none;"><p class="exp" target="_blank">Explore</p></a>
         </div>
         <div class="img3">
-            <img src="dashboard/spotify.jpg" alt="image" width="900px" height="400px" />
+            <img src="dashboard/spotify.jpg"  alt="image" width="900px" height="400px" />
         </div>
     </div>
     <div class="youtube">
@@ -64,13 +64,13 @@
         </div>
         <div class="text4">
           <h2>Get Youtube premium just at 79rs with the student account !</h2>
-          <a href="https://www.youtube.com/premium/student" style=" text-decoration:none;"><p class="exp">Explore</p></a>
+          <a href="https://www.youtube.com/premium/student"  style=" text-decoration:none;"><p class="exp" target="_blank">Explore</p></a>
         </div>
     </div>
     <div class="prime">
       <div class="text4">
         <h2>As a Prime Student member, you receive a six-month trial that includes FREE Two-Day Shipping on eligible purchases.</h2>
-        <a href="https://www.amazon.com/Amazon-Student/b?ie=UTF8&node=668781011"><p class="exp" style="border: 4px solid aqua;" style=" text-decoration:none;"`>Explore</p></a>
+        <a href="https://www.amazon.com/Amazon-Student/b?ie=UTF8&node=668781011" ><p class="exp" style="border: 4px solid aqua;" style=" text-decoration:none;" target="_blank">Explore</p></a>
       </div>
       <div class="img4">
         <img src="dashboard/prime.png" alt="image" width="800px" height="450px" />
