--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <li><a href="index.html" target="_blank" style="text-decoration: none;">Home</a></li>
             <li><a href="shop.html" target="_blank" style="text-decoration: none;">Shop</a></li>
             <li><a href="dash.html" target="_blank" style="text-decoration: none;">Dashboard</a></li>
-            <li><a href="#bottom" target="_blank" style="text-decoration: none;">contact</a></li>
+            <li><a href="#bottom"  style="text-decoration: none;">contact</a></li>
             
         </ul>
     </header>
