--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="dash.html">Dashboard</a></li>
-            <li><a href="#bottom">contact</a></li>
+            <li><a href="#bottom">Contact</a></li>
         </ul>
 
     </div>
